@@ -9,11 +9,11 @@ lib/Class/Usul/Cmd/Getopt/Usage.pm
 lib/Class/Usul/Cmd/IPC/Response.pm
 lib/Class/Usul/Cmd/IPC/Runtime.pm
 lib/Class/Usul/Cmd/Options.pm
+lib/Class/Usul/Cmd/Trait/Base.pm
 lib/Class/Usul/Cmd/Trait/DebugFlag.pm
-lib/Class/Usul/Cmd/Trait/IPC.pm
-lib/Class/Usul/Cmd/Trait/L10N.pm
 lib/Class/Usul/Cmd/Trait/OutputLogging.pm
 lib/Class/Usul/Cmd/Trait/Prompting.pm
+lib/Class/Usul/Cmd/Trait/RunExternal.pm
 lib/Class/Usul/Cmd/Trait/RunningMethods.pm
 lib/Class/Usul/Cmd/Trait/UntaintedGetopts.pm
 lib/Class/Usul/Cmd/Trait/Usage.pm
