@@ -1,5 +1,6 @@
 Revision history for Class::Usul::Cmd
 
+          - Moves Cmd attributes to Trait::Base
           - Added some more constants and functions
           - Added more tests
           - Passes Class::Usul tests
